Precision shears smoke